src/objects/Case.object
<CustomObject>
    <fields>
        <fullName>ASAP_Request__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ASAP Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Trip Managers</relationshipLabel>
        <relationshipName>Trip_Managers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Address_Departing_From__c</fullName>
        <label>Address Departing From</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Aircraft_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Aircraft 1</label>
        <referenceTo>Itinerary_Solution__c</referenceTo>
        <relationshipLabel>Trip Managers (Aircraft 1)</relationshipLabel>
        <relationshipName>Trip_Managers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Aircraft_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Aircraft 2</label>
        <referenceTo>Itinerary_Solution__c</referenceTo>
        <relationshipLabel>Trip Managers (Aircraft 2)</relationshipLabel>
        <relationshipName>Trip_Managers1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Aircraft_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Aircraft 3</label>
        <referenceTo>Itinerary_Solution__c</referenceTo>
        <relationshipLabel>Trip Managers (Aircraft 3)</relationshipLabel>
        <relationshipName>Trip_Managers2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Aircraft_Type_Requested__c</fullName>
        <label>Aircraft Type Requested</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Light Cabin Jet</fullName>
                </value>
                <value>
                    <fullName>Midsize Cabin Jet</fullName>
                </value>
                <value>
                    <fullName>Super-Mid Cabin Jet</fullName>
                </value>
                <value>
                    <fullName>Large Cabin Jet</fullName>
                </value>
                <value>
                    <fullName>Turboprop Aircraft</fullName>
                </value>
                <value>
                    <fullName>Helicopter</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Airport_Feasibility_Score__c</fullName>
        <label>Airport Feasibility (Score)</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Airport_Feasibility_Weight__c</fullName>
        <defaultValue>0.10</defaultValue>
        <label>Airport Feasibility (Weight)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Airport_Feasibility_Weighted_Score__c</fullName>
        <formula>Airport_Feasibility_Score__c  *  Airport_Feasibility_Weight__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Airport Feasibility (Weighted Score)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Airport_Feasibility__c</fullName>
        <label>Airport Feasibility</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 - Low volume flight activity; not limited by airport operating hours</fullName>
                </value>
                <value>
                    <fullName>2 - Medium volume flight activity or potential airport operating hours concerns</fullName>
                </value>
                <value>
                    <fullName>3 - High volume flight activity and very real airport operating hours concerns</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Airport_Weather_History_Score__c</fullName>
        <label>Airport Weather History (Score)</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Airport_Weather_History_Weight__c</fullName>
        <defaultValue>0.10</defaultValue>
        <label>Airport Weather History (Weight)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Airport_Weather_History__c</fullName>
        <label>Airport Weather History</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 - Airport is not traditionally impacted by bad weather</fullName>
                </value>
                <value>
                    <fullName>2 - Airport is occasionally impacted by bad weather</fullName>
                </value>
                <value>
                    <fullName>3 - Airport is highly sensitive and often impacted by poor weather</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Airport_Weather_Weighted_Score__c</fullName>
        <formula>Airport_Weather_History_Score__c  *  Airport_Weather_History_Weight__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Airport Weather (Weighted Score)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Alternate_Arriving_Airport__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Alternate Arriving Airport</label>
        <referenceTo>Airport__c</referenceTo>
        <relationshipLabel>Cases (Alternate Arriving Airport)</relationshipLabel>
        <relationshipName>Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Alternate_Departing_Airport__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Alternate Departing Airport</label>
        <referenceTo>Airport__c</referenceTo>
        <relationshipLabel>Cases (Alternate Departing Airport)</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Arriving_Airport__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Arriving Airport</label>
        <referenceTo>Airport__c</referenceTo>
        <relationshipLabel>Trips (Arriving Airport)</relationshipLabel>
        <relationshipName>Trips1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Backup_Recovery_Score__c</fullName>
        <label>Backup &amp; Recovery (Score)</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Backup_Recovery_Weight__c</fullName>
        <defaultValue>0.20</defaultValue>
        <label>Backup &amp; Recovery (Weight)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Backup_Recovery__c</fullName>
        <label>Backup &amp; Recovery</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 - Guaranteed Solution (NetJets/Flexjet/Sentient)</fullName>
                </value>
                <value>
                    <fullName>2 - EJM/National Charter</fullName>
                </value>
                <value>
                    <fullName>3 - Non-Guaranteed Solution (Local Charter/Broker)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Backup_Weighted_Score__c</fullName>
        <formula>Backup_Recovery_Score__c * Backup_Recovery_Weight__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Backup (Weighted Score)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Booked_Itinerary_Solution_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Booked Itinerary Solution 1</label>
        <referenceTo>Itinerary_Solution__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Booked_Itinerary_Solution_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Booked Itinerary Solution 2</label>
        <referenceTo>Itinerary_Solution__c</referenceTo>
        <relationshipLabel>Cases (Booked Itinerary Solution 2)</relationshipLabel>
        <relationshipName>Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Booked_Leg_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Booked Leg 1</label>
        <referenceTo>Leg__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Booked_Leg_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Booked Leg 2</label>
        <referenceTo>Leg__c</referenceTo>
        <relationshipLabel>Cases (Booked Leg 2)</relationshipLabel>
        <relationshipName>Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Booking_Confirmation_Stage__c</fullName>
        <inlineHelpText>The time should be in increments of 15 minutes (.25). For example, 1.25 = 1 hour and 15 minutes.</inlineHelpText>
        <label>Booking/Confirmation Stage Hours</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Charter_Option__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Charter Option</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Commercial_Flight_Details__c</fullName>
        <inlineHelpText>Please provide details regarding the connecting Commercial Flight.</inlineHelpText>
        <label>Commercial Flight Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Connecting_To_From_Commercial_Flight__c</fullName>
        <label>Connecting To/From Commercial Flight</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_Closed__c</fullName>
        <label>Date Closed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Requested__c</fullName>
        <label>Date Requested</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Research_Delivered_to_Client__c</fullName>
        <inlineHelpText>What date was the original research delivered to the client?</inlineHelpText>
        <label>Date research sent to client</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Trip__c</fullName>
        <label>Date of Trip</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Day_of_Travel_Score__c</fullName>
        <label>Day of Travel (Score)</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Day_of_Travel_Weight__c</fullName>
        <defaultValue>0.30</defaultValue>
        <label>Day of Travel (Weight)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Day_of_Travel_Weighted_Score__c</fullName>
        <formula>Day_of_Travel_Score__c  *  Day_of_Travel_Weight__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Day of Travel (Weighted Score)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Day_of_Travel__c</fullName>
        <label>Day of Travel</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 - No time sensitivity after landing</fullName>
                </value>
                <value>
                    <fullName>2 - Time sensitive event 5 hours + after landing</fullName>
                </value>
                <value>
                    <fullName>3 - Time sensitive event less than 5 hours after landing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Depart_Date_Service_Impact_Score__c</fullName>
        <label>Depart. Date [Service Impact] (Score)</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Depart_Date_Service_Impact_Weight__c</fullName>
        <defaultValue>0.10</defaultValue>
        <label>Depart. Date [Service Impact] (Weight)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Depart_Date_Service_Impact__c</fullName>
        <label>Depart. Date [Service Impact]</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 - Lowest Volume (~300 Days per Year)</fullName>
                </value>
                <value>
                    <fullName>2 - Medium Volume Days</fullName>
                </value>
                <value>
                    <fullName>3 - Highest Volume (Peak Days)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Depart_Date_Weighted_Score__c</fullName>
        <formula>Depart_Date_Service_Impact_Score__c  *  Depart_Date_Service_Impact_Weight__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Depart. Date (Weighted Score)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Depart_Flex_Cancellation_Score__c</fullName>
        <label>Depart. Flex. &amp; Cancellation (Score)</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Depart_Flex_Cancellation_Weight__c</fullName>
        <defaultValue>0.10</defaultValue>
        <label>Depart. Flex. &amp; Cancellation (Weight)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Depart_Flex_Cancellation__c</fullName>
        <label>Depart. Flex. &amp; Cancellation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 - Guaranteed Solution (NetJets/Flexjet/Sentient)</fullName>
                </value>
                <value>
                    <fullName>2 - EJM/National Charter/Dedicated Aircraft</fullName>
                </value>
                <value>
                    <fullName>3 - Non-Guaranteed Solution (Local Charter/Broker)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Depart_Flex_Weighted_Score__c</fullName>
        <formula>Depart_Flex_Cancellation_Score__c  *  Depart_Flex_Cancellation_Weight__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Depart. Flex. (Weighted Score)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Departing_Airport__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Departing Airport</label>
        <referenceTo>Airport__c</referenceTo>
        <relationshipLabel>Trips (Departing Airport)</relationshipLabel>
        <relationshipName>Trips</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Departure_Time_Requested_Locally__c</fullName>
        <label>Departure Time Requested (Locally)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0:00</fullName>
                </value>
                <value>
                    <fullName>1:00</fullName>
                </value>
                <value>
                    <fullName>2:00</fullName>
                </value>
                <value>
                    <fullName>3:00</fullName>
                </value>
                <value>
                    <fullName>4:00</fullName>
                </value>
                <value>
                    <fullName>5:00</fullName>
                </value>
                <value>
                    <fullName>6:00</fullName>
                </value>
                <value>
                    <fullName>7:00</fullName>
                </value>
                <value>
                    <fullName>8:00</fullName>
                </value>
                <value>
                    <fullName>9:00</fullName>
                </value>
                <value>
                    <fullName>10:00</fullName>
                </value>
                <value>
                    <fullName>11:00</fullName>
                </value>
                <value>
                    <fullName>12:00</fullName>
                </value>
                <value>
                    <fullName>13:00</fullName>
                </value>
                <value>
                    <fullName>14:00</fullName>
                </value>
                <value>
                    <fullName>15:00</fullName>
                </value>
                <value>
                    <fullName>16:00</fullName>
                </value>
                <value>
                    <fullName>17:00</fullName>
                </value>
                <value>
                    <fullName>18:00</fullName>
                </value>
                <value>
                    <fullName>19:00</fullName>
                </value>
                <value>
                    <fullName>20:00</fullName>
                </value>
                <value>
                    <fullName>21:00</fullName>
                </value>
                <value>
                    <fullName>22:00</fullName>
                </value>
                <value>
                    <fullName>23:00</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Did_you_log_your_time_spent__c</fullName>
        <label>Did you log your time spent?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Did_you_receive_client_feedback__c</fullName>
        <label>Did you receive client feedback?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Domestic_or_International__c</fullName>
        <label>Domestic or International</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Domestic</fullName>
                </value>
                <value>
                    <fullName>International</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Earliest_Departure_Date_for_Date_Range__c</fullName>
        <label>Earliest Departure Date (for Date Range)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FSTR__AlreadyGenerated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AlreadyGenerated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSTR__Approval__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approval</label>
        <referenceTo>FSTR__PCE_Approval__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Approval_Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSTR__Auto_Close_Steps_Not_Created__c</fullName>
        <inlineHelpText>This field is automatically updated by the Auto Close page with how many steps are being skipped by the auto close action.</inlineHelpText>
        <label>Auto Close - Steps Not Created</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSTR__Auto_Close__c</fullName>
        <label>Auto Close</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FSTR__Business_Process__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Business Process</label>
        <referenceTo>FSTR__Business_Process__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSTR__Completed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Process Completed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSTR__Completed_Date__c</fullName>
        <label>Process Completed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FSTR__Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSTR__Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FSTR__Email_Queue_Members__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email Queue Members</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSTR__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSTR__PCE_Definition__c</fullName>
        <label>Definition</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Parent_Event_Id__c</fullName>
        <externalId>true</externalId>
        <label>Parent Event Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Parent_Object_Name__c</fullName>
        <label>Parent Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Process_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Process Group</label>
        <referenceTo>FSTR__Process_Group__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSTR__Process_Initiated__c</fullName>
        <label>Process Initiated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FSTR__Recurring_Business_Process__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>If this case was created from a Recurring Business Process record this field links back to that record.</inlineHelpText>
        <label>Recurring Business Process</label>
        <referenceTo>FSTR__Recurring_Business_Process__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSTR__Skipped_Steps__c</fullName>
        <label>Skipped Steps</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FSTR__Step_Id__c</fullName>
        <externalId>true</externalId>
        <label>Step Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__Step_Stage_Id__c</fullName>
        <label>Step Stage Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSTR__pce_definition_lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to the Definition that this object is executing on currently.</description>
        <inlineHelpText>Link to the Definition that this object is executing on currently.</inlineHelpText>
        <label>Definition</label>
        <referenceTo>FSTR__PCE_Definition__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSTR__step_lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Step</label>
        <referenceTo>FSTR__PCE_Step__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Flight_Budget__c</fullName>
        <label>Flight Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Flight_Range__c</fullName>
        <label>Flight Range</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Regional</fullName>
                </value>
                <value>
                    <fullName>Mid Range</fullName>
                </value>
                <value>
                    <fullName>Coast to Coast</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Have_all_legs_been_reconciled__c</fullName>
        <label>Have all legs been reconciled?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Have_you_confirmed_final_trips_costs__c</fullName>
        <label>Have you confirmed final trips costs?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Latest_Departure_Date_for_Date_Range__c</fullName>
        <label>Latest Departure Date (for Date Range)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Leg_ID_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Leg ID/Name</label>
        <referenceTo>Leg__c</referenceTo>
        <relationshipLabel>Trip Managers (Leg ID/Name)</relationshipLabel>
        <relationshipName>Trip_Managers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Max_of_Passengers__c</fullName>
        <label>Potential Max # of Seats Required?</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mission_Feasibility_Score__c</fullName>
        <label>Mission Feasibility (Score)</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mission_Feasibility_Weight__c</fullName>
        <defaultValue>0.10</defaultValue>
        <label>Mission Feasibility (Weight)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Mission_Feasibility_Weighted_Score__c</fullName>
        <formula>Mission_Feasibility_Score__c  *  Mission_Feasibility_Weight__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mission Feasibility (Weighted Score)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mission_Feasibility__c</fullName>
        <label>Mission Feasibility</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 - No expected aircraft performance issues based on range/pax count</fullName>
                </value>
                <value>
                    <fullName>2 - There may be aircraft performance issues based on range/pax count</fullName>
                </value>
                <value>
                    <fullName>3 - There is a high probability of aircraft performance issues based on range/pax count</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Non_Stop_Required__c</fullName>
        <label>Non-Stop Required?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Flight__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Original Flight</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Post_Flight_Stage__c</fullName>
        <inlineHelpText>The time should be in increments of 15 minutes (.25). For example, 1.25 = 1 hour and 15 minutes.</inlineHelpText>
        <label>Post Flight Stage Hours</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Program_Period_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program Period 1</label>
        <referenceTo>Client_Program_Year__c</referenceTo>
        <relationshipLabel>Trip Managers</relationshipLabel>
        <relationshipName>Trip_Managers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Program_Period_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program Period 2</label>
        <referenceTo>Client_Program_Year__c</referenceTo>
        <relationshipLabel>Trip Managers (Program Period 2)</relationshipLabel>
        <relationshipName>Trip_Managers1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Program_Period_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program Period 3</label>
        <referenceTo>Client_Program_Year__c</referenceTo>
        <relationshipLabel>Trip Managers (Program Period 3)</relationshipLabel>
        <relationshipName>Trip_Managers2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Purpose_of_Trip__c</fullName>
        <label>Purpose of Trip</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Business</fullName>
                </value>
                <value>
                    <fullName>Personal</fullName>
                </value>
                <value>
                    <fullName>Business &amp; Personal</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Purpose_of_Trip_if_Other__c</fullName>
        <inlineHelpText>You must populate a Purpose of Trip, if Other is selected.</inlineHelpText>
        <label>Purpose of Trip, if Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QC_Stage__c</fullName>
        <inlineHelpText>The time should be in increments of 15 minutes (.25). For example, 1.25 = 1 hour and 15 minutes.</inlineHelpText>
        <label>QC Stage Hours</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Request_Cancellation_Description__c</fullName>
        <label>Request Cancellation Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>